diesel_compile_tests/tests/fail/derive/bad_aggregate.rs
extern crate diesel;

use diesel::expression::ValidGrouping;

#[derive(ValidGrouping)]
#[diesel(aggregate = true)]
//~^ ERROR: expected `,`
struct User;

fn main() {}
